@@ -1578,6 +1578,14 @@ This will of course only have effect for parameters that correspond to
 questions that are actually displayed during an installation and not for
 <quote>internal</quote> parameters.
 
+</para><para>
+
+For more debugging information, use the boot parameter
+<classname>DEBCONF_DEBUG=5</classname>.
+This will cause <classname>debconf</classname> to print much more detail
+about the current settings of each variable and about its progress through
+each package's installation scripts.
+
 </para>
   </sect2>
 
