@@ -59,6 +59,9 @@ installation-guide (2011xxxx) UNRELEASED; urgency=low
   * Add a pointer to the unofficial non-free CDs with firmware.
   * 1 gb USB key now needed for hd-media. Closes: #666090
 
+  [ Vincent McIntyre ]
+  * Mention DEBCONF_DEBUG. Closes: #668572.
+
  -- Samuel Thibault <sthibault@debian.org>  Tue, 21 Feb 2012 20:47:50 +0100
 
 installation-guide (20110122) unstable; urgency=low
